// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UserSearch.utils > renderMatchedName > should render matched name #2 > <span>Magd<b>al</b>ena Jankowska</span> 1`] = `
<span>
  Magd
  <b>
    al
  </b>
  ena Jankowska
</span>
`;

exports[`UserSearch.utils > renderMatchedName > should render matched name > <span>John <b>Wick</b></span> 1`] = `
<span>
  John 
  <b>
    Wick
  </b>
</span>
`;

exports[`renderMatchedName > should render matched name #2 > <span>Magd<b>al</b>ena Jankowska</span> 1`] = `
<span>
  Magd
  <b>
    al
  </b>
  ena Jankowska
</span>
`;

exports[`renderMatchedName > should render matched name > <span>John <b>Wick</b></span> 1`] = `
<span>
  John 
  <b>
    Wick
  </b>
</span>
`;
